tests/snapshots/functionality__soa-2.snap
---
source: tests/functionality.rs
expression: nodes_aos
snapshot_kind: text
---
NodeAossLayout {
    data: [
        NodeAos {
            op: 0,
            arg1: 0,
            arg2: 0,
        },
        NodeAos {
            op: 1,
            arg1: 10,
            arg2: 20,
        },
        NodeAos {
            op: 2,
            arg1: 20,
            arg2: 40,
        },
    ],
}
